# Hidden-Vertex

./: .gitignore  README.md  Readme.md  main.py  pyproject.toml  requirements.txt
configs/: default_search.yaml  part1_notebook_parity.yaml
docs/: ARCHITECTURE.md  DATA.md  OVERVIEW.md  PHYSICS.md  TRAINING.md
notebooks/: lhc-anamoly-detector-part(1).ipynb
scripts/: process_h5.py  run_part1_eval.py
src/data/: dataset.py  loader.py  oracle_split.py
src/model/: autoencoder.py
src/training/: engine.py
src/utils/: metrics.py
